some styling added

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
+<div class="header">
   <title>Hogwarts Enrolement</title>
   <link rel="stylesheet" type="text/css" href="/style.css">
+  </div>
 </head>
 <body>
-<nav>
+<!-- <nav> -->
   <ul>
     <li>
+    <section id="blocks">
+    <div class="monsters">
       <a href="/hogwarts">Monsters</a>
+      </div>
     </li>
     <li>
+    <div class="new monsters">
       <a href="/hogwarts/new">New Monster</a>
+      </div>
+      </section>
     </li>
   </ul>
-</nav>
+<!-- </nav> -->
 
 <%=yield %>
 </body>
